examples/test/testpolicy18278.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18278
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key4: value16
      key41: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value45
      podSelector:
        matchLabels:
          key0: value22
          key1: value18
          key30: value2
